--- a/package.json
+++ b/package.json
@@ -20,5 +20,9 @@
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
         "tailwindcss": "^1.5"
+    },
+    "dependencies": {
+        "larasocket-js": "^1.0.16",
+        "laravel-echo": "^1.8.1"
     }
 }
