--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.15.2",
         "sass-loader": "^8.0.0",
-        "tailwindcss": "^1.5"
+        "tailwindcss": "^1.5",
+        "vue-template-compiler": "^2.6.11"
     },
     "dependencies": {
         "larasocket-js": "^1.0.16",
